samples/_failures_safe/1761475376_6e3a53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48192a6b.c: In function ‘main’:
./samples/SAFE/__tmp_48192a6b.c:153:1: error: expected declaration or statement at end of input
  153 | int main(void) {
      | ^~~
